--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
+  <package id="ApprovalTests" version="3.0.8" targetFramework="net45" />
+  <package id="ApprovalUtilities" version="3.0.8" targetFramework="net45" />
   <package id="Bitrium.Http.Extensions" version="1.1.0" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="elmah.corelibrary" version="1.2.1" targetFramework="net45" />
