--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -140,7 +140,7 @@
     <Compile Include="SolutionBuilder.cs" />
     <Compile Include="StagingPackage.cs" />
     <Compile Include="StringExtensions.cs" />
-    <Compile Include="StringExtensions_SplitToLines_should.cs" />
+    <Compile Include="StringExtensions_should.cs" />
     <Compile Include="CSharp\SyntaxExtensions.cs" />
     <Compile Include="tests\Comments.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
