--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -114,14 +114,14 @@
     <Compile Include="CSharp\ICSharpSolutionValidator.cs" />
     <Compile Include="FileExtensions.cs" />
     <Compile Include="ISlideLoader.cs" />
-    <Compile Include="Lessions\CommonRegionRemover.cs" />
-    <Compile Include="Lessions\CommonRegionRemover_should.cs" />
-    <Compile Include="Lessions\CommonSingleRegionExtractor.cs" />
-    <Compile Include="Lessions\CommonSingleRegionExtractor_should.cs" />
-    <Compile Include="Lessions\Lesson.cs" />
-    <Compile Include="Lessions\LessonSlideLoader.cs" />
-    <Compile Include="Lessions\RegionRemover_should.cs" />
-    <Compile Include="Lessions\RegionsExtractor_should.cs" />
+    <Compile Include="Model\CommonRegionRemover.cs" />
+    <Compile Include="Model\CommonRegionRemover_should.cs" />
+    <Compile Include="Model\CommonSingleRegionExtractor.cs" />
+    <Compile Include="Model\CommonSingleRegionExtractor_should.cs" />
+    <Compile Include="Model\Lesson.cs" />
+    <Compile Include="Model\LessonSlideLoader.cs" />
+    <Compile Include="Model\RegionRemover_should.cs" />
+    <Compile Include="Model\RegionsExtractor_should.cs" />
     <Compile Include="Markdown2.cs" />
     <Compile Include="NullValidator.cs" />
     <Compile Include="Quizes\Quiz.cs" />
@@ -129,8 +129,8 @@
     <Compile Include="Quizes\Quiz_Test.cs" />
     <Compile Include="Quizes\QuizSlideLoader.cs" />
     <Compile Include="RegionParser_should.cs" />
-    <Compile Include="Lessions\RegionRemover.cs" />
-    <Compile Include="Lessions\RegionsExtractor.cs" />
+    <Compile Include="Model\RegionRemover.cs" />
+    <Compile Include="Model\RegionsExtractor.cs" />
     <Compile Include="RegionsParser.cs" />
     <Compile Include="SlideInfo.cs" />
     <Compile Include="Markdown_investigation.cs" />
