move and split SlideBlock

--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -114,6 +114,19 @@
     <Compile Include="CSharp\ICSharpSolutionValidator.cs" />
     <Compile Include="FileExtensions.cs" />
     <Compile Include="ISlideLoader.cs" />
+    <Compile Include="Model\Blocks\CodeBlock.cs" />
+    <Compile Include="Model\Blocks\ExecirseConfigBlock.cs" />
+    <Compile Include="Model\Blocks\ImageGaleryBlock.cs" />
+    <Compile Include="Model\Blocks\IncludeBlocksBlock.cs" />
+    <Compile Include="Model\Blocks\IncludeCode.cs" />
+    <Compile Include="Model\Blocks\IncludeCodeBlock.cs" />
+    <Compile Include="Model\Blocks\IncludeImageGalleryBlock.cs" />
+    <Compile Include="Model\Blocks\IncludeMdBlock.cs" />
+    <Compile Include="Model\Blocks\Label.cs" />
+    <Compile Include="Model\Blocks\MdBlock.cs" />
+    <Compile Include="Model\Blocks\SlideBlockExtensions.cs" />
+    <Compile Include="Model\Blocks\TexBlock.cs" />
+    <Compile Include="Model\Blocks\YoutubeBlock.cs" />
     <Compile Include="Model\CommonRegionRemover.cs" />
     <Compile Include="Model\CommonRegionRemover_should.cs" />
     <Compile Include="Model\CommonSingleRegionExtractor.cs" />
@@ -142,7 +155,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleAttribute.cs" />
     <Compile Include="Slide.cs" />
-    <Compile Include="SlideBlock.cs" />
+    <Compile Include="Model\Blocks\SlideBlock.cs" />
     <Compile Include="SolutionBuildResult.cs" />
     <Compile Include="SolutionBuilder.cs" />
     <Compile Include="StagingPackage.cs" />
