--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
 	For more information on how to configure your ASP.NET application, please visit
 	http://go.microsoft.com/fwlink/?LinkId=301880
@@ -6,137 +6,141 @@
 <configuration>
 	<configSections>
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
 
 		<sectionGroup name="elmah">
-			<section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
-			<section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
-			<section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
-			<section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
+			<section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah"/>
+			<section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah"/>
+			<section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah"/>
+			<section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah"/>
 		</sectionGroup>
 	</configSections>
 	<connectionStrings>
-		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<appSettings>
-		<add key="webpages:Version" value="3.0.0.0" />
-		<add key="webpages:Enabled" value="false" />
-		<add key="ClientValidationEnabled" value="true" />
-		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<add key="elmah.mvc.disableHandler" value="false" />
-		<add key="elmah.mvc.disableHandleErrorFilter" value="false" />
+		<add key="webpages:Version" value="3.0.0.0"/>
+		<add key="webpages:Enabled" value="false"/>
+		<add key="ClientValidationEnabled" value="true"/>
+		<add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+		<add key="elmah.mvc.disableHandler" value="false"/>
+		<add key="elmah.mvc.disableHandleErrorFilter" value="false"/>
 		<!-- Управление доступом в самой Elmah не работает:  https://github.com/alexanderbeletsky/elmah-mvc/issues/28. Авторизация сделана средствами ASP.NET - см ниже -->
-		<add key="elmah.mvc.requiresAuthentication" value="false" />
-		<add key="elmah.mvc.IgnoreDefaultRoute" value="false" />
-		<add key="elmah.mvc.allowedRoles" value="*" />
-		<add key="elmah.mvc.allowedUsers" value="*" />
-		<add key="elmah.mvc.route" value="elmah" />
+		<add key="elmah.mvc.requiresAuthentication" value="false"/>
+		<add key="elmah.mvc.IgnoreDefaultRoute" value="false"/>
+		<add key="elmah.mvc.allowedRoles" value="*"/>
+		<add key="elmah.mvc.allowedUsers" value="*"/>
+		<add key="elmah.mvc.route" value="elmah"/>
 	</appSettings>
 	<system.web>
-		<authentication mode="None" />
+		<authentication mode="None"/>
 		<compilation debug="true" targetFramework="4.5">
 			<assemblies>
-				<add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+				<add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
 			</assemblies>
 		</compilation>
-		<httpRuntime targetFramework="4.5" maxRequestLength="16000000" />
-		<customErrors mode="Off" />
+		<httpRuntime targetFramework="4.5" maxRequestLength="16000000"/>
+		<customErrors mode="Off"/>
 
 		<httpModules>
-			<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
-			<add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
-			<add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
+			<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah"/>
+			<add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah"/>
+			<add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah"/>
 		</httpModules>
 	</system.web>
 	<system.webServer>
 		<modules>
-			<remove name="FormsAuthenticationModule" />
+			<remove name="FormsAuthenticationModule"/>
 
 
 
-			<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
-			<add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
-			<add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
+			<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler"/>
+			<add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler"/>
+			<add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler"/>
 		</modules>
 		<staticContent>
-			<mimeMap fileExtension="woff" mimeType="application/font-woff" />
-			<mimeMap fileExtension="odp" mimeType="application/vnd.oasis.opendocument.presentation" />
-			<mimeMap fileExtension="zip" mimeType="application/zip" />
+			<mimeMap fileExtension="woff" mimeType="application/font-woff"/>
+			<mimeMap fileExtension="odp" mimeType="application/vnd.oasis.opendocument.presentation"/>
+			<mimeMap fileExtension="zip" mimeType="application/zip"/>
 		</staticContent>
 		<security>
 			<requestFiltering>
 				<requestLimits maxAllowedContentLength="16000000"></requestLimits>
 				<hiddenSegments>
-					<add segment="Courses.Staging" />
+					<add segment="Courses.Staging"/>
 				</hiddenSegments>
 			</requestFiltering>
 		</security>
-		<validation validateIntegratedModeConfiguration="false" />
+		<validation validateIntegratedModeConfiguration="false"/>
 	</system.webServer>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
-				<assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30AD4FE6B2A6AEED" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0"/>
 			</dependentAssembly>
 			<dependentAssembly>
-				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+				<assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35"/>
+				<bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
 			</dependentAssembly>
 			<dependentAssembly>
-				<assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
+				<bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0"/>
 			</dependentAssembly>
 			<dependentAssembly>
-				<assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+				<assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
+				<bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
 			</dependentAssembly>
 			<dependentAssembly>
-				<assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+				<assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35"/>
+				<bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234"/>
 			</dependentAssembly>
 			<dependentAssembly>
-				<assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+				<assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
 			</dependentAssembly>
 			<dependentAssembly>
-				<assemblyIdentity name="System.Runtime" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+				<assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
 			</dependentAssembly>
 			<dependentAssembly>
-				<assemblyIdentity name="Microsoft.AspNet.Identity.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+				<assemblyIdentity name="System.Runtime" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
 			</dependentAssembly>
 			<dependentAssembly>
-				<assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-4.2.13.0" newVersion="4.2.13.0" />
+				<assemblyIdentity name="Microsoft.AspNet.Identity.Core" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0"/>
 			</dependentAssembly>
 			<dependentAssembly>
-				<assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+				<assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-4.2.13.0" newVersion="4.2.13.0"/>
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0"/>
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
 	<entityFramework>
 		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
 			<parameters>
-				<parameter value="v11.0" />
+				<parameter value="v11.0"/>
 			</parameters>
 		</defaultConnectionFactory>
 		<providers>
-			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
 		</providers>
 	</entityFramework>
 	<elmah>
-		<security allowRemoteAccess="1" />
-		<errorLog type="Elmah.MemoryErrorLog, Elmah, Version=1.2.14318.0, Culture=neutral, PublicKeyToken=null" size="200" />
+		<security allowRemoteAccess="1"/>
+		<errorLog type="Elmah.MemoryErrorLog, Elmah, Version=1.2.14318.0, Culture=neutral, PublicKeyToken=null" size="200"/>
 	</elmah>
 	<location path="elmah">
 		<!-- Управление доступом в самой Elmah не работает :( https://github.com/alexanderbeletsky/elmah-mvc/issues/28 -->
 		<system.web>
 			<authorization>
-				<allow roles="admin" />
-				<deny users="*" />
+				<allow roles="admin"/>
+				<deny users="*"/>
 			</authorization>
 		</system.web>
 	</location>
