--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -10,6 +10,8 @@
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
+  <package id="LtiLibrary.Core" version="1.5.4" targetFramework="net45" />
+  <package id="LtiLibrary.Owin.Security.Lti" version="1.0.0-alpha" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="1.0.0" targetFramework="net45" />
@@ -27,9 +29,9 @@
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.2-rc" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Cookies" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Facebook" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Google" version="2.0.0" targetFramework="net45" />
@@ -38,7 +40,7 @@
   <package id="Microsoft.Owin.Security.Twitter" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="NLog" version="3.1.0.0" targetFramework="net45" />
   <package id="NLog.Config" version="3.1.0.0" targetFramework="net45" />
   <package id="NLog.Schema" version="3.1.0.0" targetFramework="net45" />
