--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -132,9 +132,20 @@
     <Compile Include="Model\CommonRegionRemover_should.cs" />
     <Compile Include="Model\CommonSingleRegionExtractor.cs" />
     <Compile Include="Model\CommonSingleRegionExtractor_should.cs" />
-    <Compile Include="Model\EdxComponents\Component.cs" />
-    <Compile Include="Model\EdxComponents\ComponentReference.cs" />
-    <Compile Include="Model\EdxComponents\ProblemComponent.cs" />
+    <Compile Include="Model\Edx\Chapter.cs" />
+    <Compile Include="Model\Edx\EdxComponents\CodeComponent.cs" />
+    <Compile Include="Model\Edx\EdxComponents\Component.cs" />
+    <Compile Include="Model\Edx\EdxItem.cs" />
+    <Compile Include="Model\Edx\EdxReference.cs" />
+    <Compile Include="Model\Edx\Course.cs" />
+    <Compile Include="Model\Edx\CourseWithChapters.cs" />
+    <Compile Include="Model\Edx\EdxComponents\GalleryComponent.cs" />
+    <Compile Include="Model\Edx\EdxComponents\HtmlComponent.cs" />
+    <Compile Include="Model\Edx\EdxComponents\LtiComponent.cs" />
+    <Compile Include="Model\Edx\EdxComponents\ProblemComponent.cs" />
+    <Compile Include="Model\Edx\Sequential.cs" />
+    <Compile Include="Model\Edx\Vertical.cs" />
+    <Compile Include="Model\Edx\EdxComponents\VideoComponent.cs" />
     <Compile Include="Model\Lesson.cs" />
     <Compile Include="Model\LessonSlideLoader.cs" />
     <Compile Include="Model\RegionRemover_should.cs" />
