--- a/src/uLearnToEdx/uLearnToEdx.csproj
+++ b/src/uLearnToEdx/uLearnToEdx.csproj
@@ -44,6 +44,10 @@
       <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -55,18 +59,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArchiveManager.cs" />
-    <Compile Include="Edx\Chapter.cs" />
-    <Compile Include="Edx\CourseWithChapters.cs" />
-    <Compile Include="Edx\Sequential.cs" />
-    <Compile Include="Edx\Vertical.cs" />
+    <Compile Include="Json\Video.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Edx\Course.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
     <None Include="static\flexslider-icon.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="video.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
