--- a/src/uLearn/packages.config
+++ b/src/uLearn/packages.config
@@ -11,6 +11,7 @@
   <package id="Microsoft.Bcl.Metadata" version="1.0.9-alpha" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Common" version="0.6.4033103-beta" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="0.6.4033103-beta" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
   <package id="RazorEngine" version="3.4.1" targetFramework="net45" />
 </packages>
