--- a/src/uLearnToEdx/uLearnToEdx.csproj
+++ b/src/uLearnToEdx/uLearnToEdx.csproj
@@ -79,8 +79,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArchiveManager.cs" />
+    <Compile Include="CookieAwareWebClient.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Converter.cs" />
     <Compile Include="Converter_should.cs" />
+    <Compile Include="Downloader.cs" />
     <Compile Include="Json\Video.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
