--- a/src/uLearnToEdx/uLearnToEdx.csproj
+++ b/src/uLearnToEdx/uLearnToEdx.csproj
@@ -44,6 +44,10 @@
       <HintPath>..\packages\ApprovalUtilities.3.0.8\lib\net45\ApprovalUtilities.Net45.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="CommandLine, Version=1.9.71.2, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -84,7 +88,7 @@
     </Compile>
     <Compile Include="Converter.cs" />
     <Compile Include="Converter_should.cs" />
-    <Compile Include="Downloader.cs" />
+    <Compile Include="DownloadManager.cs" />
     <Compile Include="Json\Video.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
